spacing issues

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -93,6 +93,9 @@ body {
 		margin: 0;
 		color: $water;
 	}
+	p {
+		line-height: 1.5em;
+	}
 }
 
 .list.section {
